--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -70,10 +70,8 @@
 \include{chapters/1-intro}
 \include{chapters/2-marco-teorico}
 \include{chapters/3-scheduling}
-%\include{chapters/3-wand}
-%\include{chapters/4-diseno}
-%\include{chapters/5-casos}
-\include{chapters/6-conclusiones}
+\include{chapters/4-evaluacionexperimental}
+\include{chapters/5-conclusiones}
 % ----------------------------------------------------------
 \bibliographystyle{apa-good}
 \bibliography{referencias}
