agregado Efficient Parallel Block-Max WAND Algorithm (Oscar Rojas)

--- a/referencias.bib
+++ b/referencias.bib
@@ -362,6 +362,25 @@
   Url                      = { http://dpavez.cl/inproceedings }
 }
 
+@InCollection{Rojas:2013,
+  Title                    = {Efficient Parallel Block-Max WAND Algorithm},
+  Author                   = {Rojas, Oscar and Gil-Costa, Veronica and Marin, Mauricio},
+  Booktitle                = {Euro-Par 2013 Parallel Processing},
+  Publisher                = {Springer Berlin Heidelberg},
+  Year                     = {2013},
+  Editor                   = {Wolf, Felix and Mohr, Bernd and an Mey, Dieter},
+  Pages                    = {394-405},
+  Series                   = {Lecture Notes in Computer Science},
+  Volume                   = {8097},
+
+  Doi                      = {10.1007/978-3-642-40047-6_41},
+  ISBN                     = {978-3-642-40046-9},
+  Language                 = {English},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.24},
+  Url                      = {http://dx.doi.org/10.1007/978-3-642-40047-6_41}
+}
+
 @Article{Articulo:2013,
   Title                    = { {Bioinform{\'a}tica} },
   Author                   = {Ignacio Sandoval},
