se agrega Probabilistic Static Pruning of Inverted Files a la bibliografia

--- a/referencias.bib
+++ b/referencias.bib
@@ -60,6 +60,31 @@
   Timestamp                = {2014.10.27}
 }
 
+@Article{Blanco:2010,
+  Title                    = {Probabilistic Static Pruning of Inverted Files},
+  Author                   = {Blanco, Roi and Barreiro, Alvaro},
+  Journal                  = {ACM Trans. Inf. Syst.},
+  Year                     = {2010},
+
+  Month                    = jan,
+  Number                   = {1},
+  Pages                    = {1:1--1:33},
+  Volume                   = {28},
+
+  Acmid                    = {1658378},
+  Address                  = {New York, NY, USA},
+  Articleno                = {1},
+  Doi                      = {10.1145/1658377.1658378},
+  ISSN                     = {1046-8188},
+  Issue_date               = {January 2010},
+  Keywords                 = {Pruning, compression, efficiency, inverted files, probabilistic models},
+  Numpages                 = {33},
+  Owner                    = {danilobustos},
+  Publisher                = {ACM},
+  Timestamp                = {2014.11.28},
+  Url                      = {http://doi.acm.org/10.1145/1658377.1658378}
+}
+
 @Book{Borodin:1998,
   Title                    = {Online Computation and Competitive Analysis},
   Author                   = {Borodin, Allan and El-Yaniv, Ran},
