actualizada referencias y correciones en Marco:MBV

--- a/referencias.bib
+++ b/referencias.bib
@@ -47,6 +47,17 @@
   Timestamp                = {2014.10.27}
 }
 
+@Book{Baeza-Yates:2008,
+  Title                    = {Cómo funciona la Web},
+  Author                   = {Baeza-Yates, R. A. and Arenas, Marcelo and Gutiérrez, Claudio and Hurtado, Carlos and Marín Mauricio and Navarro, Gonzalo and Piquer, José and Rodríguez, Andrea and Ruiz-del-Solar, Javier and Velasco, Javier},
+  Editor                   = {Claudio Gutiérrez Gallardo},
+  Publisher                = {Centro de Investigación de la Web},
+  Year                     = {2008},
+
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.30}
+}
+
 @Book{Baeza-Yates:2011,
   Title                    = {Modern Information Retrieval},
   Author                   = {Baeza-Yates, Ricardo A. and Ribeiro-Neto, Berthier},
@@ -58,6 +69,29 @@
   ISBN                     = {020139829X},
   Owner                    = {danilobustos},
   Timestamp                = {2014.10.27}
+}
+
+@Article{Barroso:2003,
+  Title                    = {Web Search for a Planet: The Google Cluster Architecture},
+  Author                   = {Barroso, Luiz Andr{\'e} and Dean, Jeffrey and H\"{o}lzle, Urs},
+  Journal                  = {IEEE Micro},
+  Year                     = {2003},
+
+  Month                    = mar,
+  Number                   = {2},
+  Pages                    = {22--28},
+  Volume                   = {23},
+
+  Acmid                    = {776716},
+  Address                  = {Los Alamitos, CA, USA},
+  Doi                      = {10.1109/MM.2003.1196112},
+  ISSN                     = {0272-1732},
+  Issue_date               = {March 2003},
+  Numpages                 = {7},
+  Owner                    = {danilobustos},
+  Publisher                = {IEEE Computer Society Press},
+  Timestamp                = {2014.11.30},
+  Url                      = {http://dx.doi.org/10.1109/MM.2003.1196112}
 }
 
 @Article{Blanco:2010,
