se arregla el problema de referencias

--- a/referencias.bib
+++ b/referencias.bib
@@ -49,8 +49,7 @@
 
 @Book{Baeza-Yates:2008,
   Title                    = {Cómo funciona la Web},
-  Author                   = {Baeza-Yates, R. A. and Arenas, Marcelo and Gutiérrez, Claudio and Hurtado, Carlos and Marín Mauricio and Navarro, Gonzalo and Piquer, José and Rodríguez, Andrea and Ruiz-del-Solar, Javier and Velasco, Javier},
-  Editor                   = {Claudio Gutiérrez Gallardo},
+  Author                   = {Baeza-Yates, R. A. and Arenas, Marcelo and Gutiérrez, Claudio and Hurtado, Carlos and Marín, Mauricio and Navarro, Gonzalo and Piquer, José and Rodríguez, Andrea and Ruiz-del-Solar, Javier and Velasco, Javier},
   Publisher                = {Centro de Investigación de la Web},
   Year                     = {2008},
 
@@ -172,6 +171,20 @@
   Owner                    = {danilobustos},
   Timestamp                = {2014.10.02},
   Url                      = {http://doi.acm.org/10.1145/956863.956944}
+}
+
+@Book{Croft:2009,
+  Title                    = {Search Engines: Information Retrieval in Practice},
+  Author                   = {Croft, Bruce and Metzler, Donald and Strohman, Trevor},
+  Publisher                = {Addison-Wesley Publishing Company},
+  Year                     = {2009},
+
+  Address                  = {USA},
+  Edition                  = {1st},
+
+  ISBN                     = {0136072240, 9780136072249},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.30}
 }
 
 @InProceedings{Cronen-Townsend:2002,
