Se agrega 'introduction to information retrieval' y es citada desde marco:ii

--- a/referencias.bib
+++ b/referencias.bib
@@ -453,6 +453,19 @@
   Url                      = {http://dx.doi.org/10.1007/978-3-642-40047-6_41}
 }
 
+@Book{Salton:2003,
+  Title                    = {Introduction to Modern Information Retrieval},
+  Author                   = {Salton, Gerard and McGill, Michael J.},
+  Publisher                = {McGraw-Hill, Inc.},
+  Year                     = {2003},
+
+  Address                  = {New York, NY, USA},
+
+  ISBN                     = {0070544840},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.30}
+}
+
 @Article{Articulo:2013,
   Title                    = { {Bioinform{\'a}tica} },
   Author                   = {Ignacio Sandoval},
