Marco teorico revisión 2 hasta 'Estrategias de evaluación de queries'

--- a/referencias.bib
+++ b/referencias.bib
@@ -24,7 +24,7 @@
 
 @TechReport{techreport:2013,
   Title                    = { {T{\'i}tulo del Tech Report} },
-  Author                   = { Gabrielle Aplin },
+  Author                   = {Gabrielle Aplin},
   Institution              = { USACH },
   Year                     = { 1987 },
 
@@ -34,6 +34,28 @@
   Type                     = { Tipo de reporte },
 
   Url                      = { http://dpavez.cl/techreport }
+}
+
+@InProceedings{Arroyuelo:2013,
+  Title                    = {Document Identifier Reassignment and Run-length-compressed Inverted Indexes for Improved Search Performance},
+  Author                   = {Arroyuelo, Diego and Gonz\'{a}lez, Sen{\'e}n and Oyarz\'{u}n, Mauricio and Sepulveda, Victor},
+  Booktitle                = {Proceedings of the 36th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  Year                     = {2013},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {173--182},
+  Publisher                = {ACM},
+  Series                   = {SIGIR '13},
+
+  Acmid                    = {2484079},
+  Doi                      = {10.1145/2484028.2484079},
+  ISBN                     = {978-1-4503-2034-4},
+  Keywords                 = {document reordering, inverted index compression, query processing},
+  Location                 = {Dublin, Ireland},
+  Numpages                 = {10},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.30},
+  Url                      = {http://doi.acm.org/10.1145/2484028.2484079}
 }
 
 @Book{Buttcher:2010,
@@ -544,6 +566,28 @@
   Publisher                = {Pergamon Press, Inc.},
   Timestamp                = {2014.10.23},
   Url                      = {http://dx.doi.org/10.1016/0306-4573(95)00020-H}
+}
+
+@InProceedings{Yan:2009,
+  Title                    = {Inverted Index Compression and Query Processing with Optimized Document Ordering},
+  Author                   = {Yan, Hao and Ding, Shuai and Suel, Torsten},
+  Booktitle                = {Proceedings of the 18th International Conference on World Wide Web},
+  Year                     = {2009},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {401--410},
+  Publisher                = {ACM},
+  Series                   = {WWW '09},
+
+  Acmid                    = {1526764},
+  Doi                      = {10.1145/1526709.1526764},
+  ISBN                     = {978-1-60558-487-4},
+  Keywords                 = {IR query processing, document ordering, index compression, inverted index, search engines},
+  Location                 = {Madrid, Spain},
+  Numpages                 = {10},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.30},
+  Url                      = {http://doi.acm.org/10.1145/1526709.1526764}
 }
 
 @Article{Zobel:2006,
