Marco teorico done

--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -13,7 +13,7 @@
 %  language=Java,
 %  numbers=left,
 %  aboveskip=3mm,
-%  belowskip=3mm,
+º%  belowskip=3mm,
 %  showstringspaces=false,
 %  columns=flexible,
 %  basicstyle={\small\ttfamily},
