Se arreglan los diagramas de clases para TopKMultiThread

--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -33,7 +33,7 @@
 % % Pa usar quotes
 \usepackage{csquotes}
 \usepackage{rotating}
-\usepackage{pbox}
+%\usepackage{pbox}
 
 
 \keywords{XML; Key Implication}
