reestructuracion de la tesis

--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -72,9 +72,11 @@
 \hyphenation{de-di-ca-da a-no-ta-cio-nes re-sul-ta-dos fun-cio-na-les se-man-ti-ca}
 \include{chapters/1-intro}
 \include{chapters/2-marco-teorico}
-\include{chapters/3-scheduling}
-\include{chapters/4-evaluacionexperimental}
-\include{chapters/5-conclusiones}
+\include{chapters/3-wand}
+\include{chapters/4-prediccion}
+\include{chapters/5-scheduling}
+\include{chapters/6-evaluacionexperimental}
+\include{chapters/7-conclusiones}
 % ----------------------------------------------------------
 \bibliographystyle{apa-good}
 \bibliography{referencias}
