Se agrega la introducción al capitulo de scheduling

--- a/referencias.bib
+++ b/referencias.bib
@@ -386,6 +386,26 @@
   Url                      = {http://doi.acm.org/10.1145/2348283.2348508}
 }
 
+@InProceedings{Gil-Costa:2013,
+  Title                    = {Service Deployment Algorithms for Vertical Search Engines},
+  Author                   = {Gil-Costa, Veronica and Inostrosa-Psijas, Alonso and Marin, Mauricio and Feuestein, Esteban},
+  Booktitle                = {Proceedings of the 2013 21st Euromicro International Conference on Parallel, Distributed, and Network-Based Processing},
+  Year                     = {2013},
+
+  Address                  = {Washington, DC, USA},
+  Pages                    = {140--147},
+  Publisher                = {IEEE Computer Society},
+  Series                   = {PDP '13},
+
+  Acmid                    = {2497552},
+  Doi                      = {10.1109/PDP.2013.28},
+  ISBN                     = {978-0-7695-4939-2},
+  Numpages                 = {8},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.12.16},
+  Url                      = {http://dx.doi.org/10.1109/PDP.2013.28}
+}
+
 @PhdThesis{tesis:2013,
   Title                    = { {T{\'i}tulo Tesis} },
   Author                   = { Juan Gonz{\'a}lez },
