se agrega el contexto de estrategias de bloques

--- a/referencias.bib
+++ b/referencias.bib
@@ -469,6 +469,43 @@
   Url                      = {http://dx.doi.org/10.1007/978-3-540-30213-1_5}
 }
 
+@InCollection{Hurink:2008,
+  Title                    = {Online Algorithm for Parallel Job Scheduling and Strip Packing},
+  Author                   = {Hurink, JohannL. and Paulus, JacobJan},
+  Booktitle                = {Approximation and Online Algorithms},
+  Publisher                = {Springer Berlin Heidelberg},
+  Year                     = {2008},
+  Editor                   = {Kaklamanis, Christos and Skutella, Martin},
+  Pages                    = {67-74},
+  Series                   = {Lecture Notes in Computer Science},
+  Volume                   = {4927},
+
+  Doi                      = {10.1007/978-3-540-77918-6_6},
+  ISBN                     = {978-3-540-77917-9},
+  Language                 = {English},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.12.17},
+  Url                      = {http://dx.doi.org/10.1007/978-3-540-77918-6_6}
+}
+
+@Article{Hurink2008B,
+  Title                    = {Online scheduling of parallel jobs on two machines is 2-competitive },
+  Author                   = {J.L. Hurink and J.J. Paulus},
+  Journal                  = {Operations Research Letters },
+  Year                     = {2008},
+  Number                   = {1},
+  Pages                    = {51 - 56},
+  Volume                   = {36},
+
+  Abstract                 = {We consider online scheduling of parallel jobs on parallel machines. For the problem with two machines and the objective of minimizing the makespan, we show that 2 is a tight lower bound on the competitive ratio. For the problem with m machines, we derive lower bounds using an \{ILP\} formulation. },
+  Doi                      = {http://dx.doi.org/10.1016/j.orl.2007.06.001},
+  ISSN                     = {0167-6377},
+  Keywords                 = {Online scheduling},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.12.17},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0167637707000661}
+}
+
 @InProceedings{Jeon:2013,
   Title                    = {Adaptive Parallelism for Web Search},
   Author                   = {Jeon, Myeongjae and He, Yuxiong and Elnikety, Sameh and Cox, Alan L. and Rixner, Scott},
