descripcion del problema

--- a/referencias.bib
+++ b/referencias.bib
@@ -324,6 +324,29 @@
   Url                      = {http://doi.acm.org/10.1145/1498759.1498761}
 }
 
+@Article{Dean:2013,
+  Title                    = {The Tail at Scale},
+  Author                   = {Dean, Jeffrey and Barroso, Luiz Andr{\'e}},
+  Journal                  = {Commun. ACM},
+  Year                     = {2013},
+
+  Month                    = feb,
+  Number                   = {2},
+  Pages                    = {74--80},
+  Volume                   = {56},
+
+  Acmid                    = {2408794},
+  Address                  = {New York, NY, USA},
+  Doi                      = {10.1145/2408776.2408794},
+  ISSN                     = {0001-0782},
+  Issue_date               = {February 2013},
+  Numpages                 = {7},
+  Owner                    = {danilobustos},
+  Publisher                = {ACM},
+  Timestamp                = {2014.12.20},
+  Url                      = {http://doi.acm.org/10.1145/2408776.2408794}
+}
+
 @InProceedings{Ding:2011,
   Title                    = {Faster Top-k Document Retrieval Using Block-max Indexes},
   Author                   = {Ding, Shuai and Suel, Torsten},
