--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -1,4 +1,4 @@
-\documentclass[logo,magister]{tesis-postgrado}
+\documentclass[logo,magister,openany]{tesis-postgrado}
 
 % % Declaración para colocar código Java
 %\usepackage{listings}
@@ -63,7 +63,7 @@
 \listoftables
 % % AGREGADO PARA IMPRIMIR EN DOBLE CARA
 \newpage\null\thispagestyle{empty}\newpage
-%\listofalgorithms
+\listofalgorithms
 % ----------------------------------------------------------
 \mainmatter
 \fancyhead[L]{\slshape \leftmark}
