se agregan dos apendices

--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -82,10 +82,10 @@
 \bibliography{referencias}
 % ----------------------------------------------------------
 % NO TIENE APENDICES
-%\appendix
-%\addappheadtotoc 
+\appendix
+\addappheadtotoc 
 % ----------------------------------------------------------
-%\include{chapters/ApendiceA}
-%\include{chapters/ApendiceB}
+\include{chapters/ApendiceA}
+\include{chapters/ApendiceB}
 %\include{chapters/ApendiceC}
 \end{document}
