--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -35,8 +35,7 @@
 \usepackage{rotating}
 \usepackage{floatrow}
 
-
-\keywords{XML; Key Implication}
+\keywords{information retrieval; search engines; wand algorithm}
 
 \begin{document}
 \baselineskip 23pt
