Se corrigen errores en la intro, marco teorico, scheuling y evaluacion experimental

--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -34,6 +34,7 @@
 \usepackage{csquotes}
 \usepackage{rotating}
 \usepackage{floatrow}
+\usepackage{upquote}
 
 \keywords{information retrieval; search engines; wand algorithm}
 
